# mu_feature_ffa

./: Cargo.toml  pip-requirements.txt
.github/workflows/: release-secure-partitions.yml
.pytool/: CISettings.py
FfaFeaturePkg/: FfaFeaturePkg.dsc
FfaFeaturePkg/Docs/: PartitionGuide.md  TpmService.md
FfaFeaturePkg/SecurePartitions/MsSecurePartitionRust/: Cargo.toml  README.md  build.rs
FfaFeaturePkg/SecurePartitions/MsSecurePartitionRust/linker/: qemu-armvirt.ld  qemu-sbsa.ld
FfaFeaturePkg/SecurePartitions/MsSecurePartitionRust/src/: main.rs
