[workspace]
resolver = "2"

# Add packages that generate binaries here
members = [
  "FfaFeaturePkg/Library/TestServiceLibRust",
  "FfaFeaturePkg/SecurePartitions/MsSecurePartitionRust"
]

# Add packages that generate libraries here
[workspace.dependencies]
aarch64-cpu = "11.0.0"
aarch64-rt = { version = "0.2.2", default-features = false, features = [
    "el1",
    "exceptions",
] }
aarch64-haf = { git = "https://github.com/OpenDevicePartnership/odp-secure-services", rev = "6776d952" }
ec-service-lib = { git = "https://github.com/OpenDevicePartnership/odp-secure-services", rev = "6776d952" }
odp-ffa = { git = "https://github.com/OpenDevicePartnership/odp-secure-services", rev = "6776d952" }
hafnium = { git = "https://github.com/OpenDevicePartnership/odp-secure-services", rev = "6776d952" }
log = { version = "0.4", default-features = false }
uuid = { version = "1.0", default-features = false, features = ["v1"] }
test-service-lib = { path = "FfaFeaturePkg/Library/TestServiceLibRust" }
