[package]
name = "msft-sp"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Microsoft QEMU based Secure Partition Service"
authors = ["Kun Qin <kuqin@microsoft.com>"]
repository = "https://github.com/"
keywords = ["arm", "aarch64", "cortex-a"]
categories = ["no-std"]

[features]
default = []
tpm = []

[target.'cfg(target_os = "none")'.dependencies]
aarch64-rt.workspace = true
aarch64-cpu.workspace = true
ec-service-lib.workspace = true
test-service-lib.workspace = true
aarch64-haf.workspace = true
hafnium.workspace = true

[dependencies]
odp-ffa.workspace = true
log.workspace = true

[build-dependencies]
chrono = "0.4"
